# Echo

./: .gitignore
.github/workflows/: release.yml
echo/: README.md  index.html  package.json  release_echo.py  requirements.txt  server.py  vite.config.js
echo/src/: App.jsx  index.css
echo/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
echo/src-tauri/capabilities/: default.json
echo/src-tauri/src/: hide_sharing.rs  lib.rs  main.rs
echo/src/api/: client.js  giphy.js
echo/src/components/: ChannelSidebar.jsx  ChannelSidebar.module.css  Login.jsx  Login.module.css  MainApp.jsx  MainApp.module.css  MembersSidebar.jsx  MembersSidebar.module.css  MessageArea.jsx  MessageArea.module.css  Modals.jsx  Modals.module.css  NavigationBar.jsx  ServerSidebar.jsx  ServerSidebar.module.css  SettingsModal.jsx  SettingsModal.module.css  VoiceBar.jsx  VoiceBar.module.css
echo/src/components/views/: ChatView.jsx  DMsSplitView.jsx  NeumorphicViews.module.css  ServerSplitView.jsx  ServersView.jsx
echo/src/hooks/: useAuth.js  useMainAppState.js  useWebRTC.js  useWebSocket.js
echo/src/voice/: videoFeeds.js  voiceChat.js
echo/tests/: test_integration.py
